# api/api.yaml
@@ -1236,6 +1236,140 @@ paths:
                   default: bug
               required:
               - issue_type
+  "/projects/{project_id}/issues/{issue_id}/severity/":
+    put:
+      summary: Edita la severitat d'una Issue
+      tags:
+      - Issues
+      security:
+      - ApiKeyAuth: []
+      parameters:
+      - name: project_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      - name: issue_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Issue creada
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  subject:
+                    type: string
+                  description:
+                    type: string
+                  status:
+                    type: string
+                  created_by_user_id:
+                    type: integer
+                  created_by_user_username:
+                    type: string
+                  creation_date:
+                    type: string
+                  issue_type:
+                    type: string
+                  severity:
+                    type: string
+                  priority:
+                    type: string
+                  limitDate:
+                    type: string
+                  blocked:
+                    type: boolean
+                  assigned_profile_id:
+                    type: integer
+                  assigned_profile_username:
+                    type: string
+                  watchers:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        profile_id:
+                          type: integer
+                        profile:
+                          type: string
+                  attachments:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        name:
+                          type: string
+                        path:
+                          type: string
+                  activities:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        profile_id:
+                          type: integer
+                        profile:
+                          type: string
+                        message:
+                          type: string
+                        date:
+                          type: string
+                  comments:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        profile_id:
+                          type: integer
+                        profile:
+                          type: string
+                        text:
+                          type: string
+                        date:
+                          type: string
+        '404':
+          description: Usuari no existent
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                severity:
+                  type: string
+                  enum:
+                  - wishlist
+                  - minor
+                  - norm
+                  - important
+                  - critical
+                  default: wishlist
+              required:
+              - severity
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                severity:
+                  type: string
+                  enum:
+                  - wishlist
+                  - minor
+                  - norm
+                  - important
+                  - critical
+                  default: wishlist
+              required:
+              - severity
 servers:
 - url: http://127.0.0.1:3000
 components:
