# app/controllers/issues_controller.rb
@@ -230,9 +230,10 @@ class IssuesController < ApplicationController
     @project = get_project
     @issue = get_issue
     @currentType = @issue.issue_type
+    user = get_user
     respond_to do |format|
       if @issue.update(issue_params)
-        TimelineEvent.create(:issue => @issue, :user => current_user, :message => "changed the type from " + @currentType.capitalize() + " to " + @issue.issue_type.capitalize())
+        TimelineEvent.create(:issue => @issue, :user => user, :message => "changed the type from " + @currentType.capitalize() + " to " + @issue.issue_type.capitalize())
         format.json { render json: @issue, serializer: IssueSerializer }
         format.html { redirect_to issue_path(@project.id, @issue.id), notice: "Issue was successfully updated." }
       else
@@ -246,10 +247,17 @@ class IssuesController < ApplicationController
     @project = get_project
     @issue = get_issue
     @currentSeverity = @issue.severity
-    if @issue.update(issue_params)
-      TimelineEvent.create(:issue => @issue, :user => current_user, :message => "changed the severity from " + @currentSeverity.capitalize() + " to " + @issue.severity.capitalize())
+    user = get_user
+    respond_to do |format|
+      if @issue.update(issue_params)
+        TimelineEvent.create(:issue => @issue, :user => user, :message => "changed the severity from " + @currentSeverity.capitalize() + " to " + @issue.severity.capitalize())
+        format.json { render json: @issue, serializer: IssueSerializer }
+        format.html { redirect_to issue_path(@project.id, @issue.id), notice: "Issue was successfully updated." }
+      else
+        format.json { render json: @issue.errors, status: :unprocessable_entity }
+        format.html { redirect_to issue_path(@project.id, @issue.id), notice: "Issue was unsuccessfully updated." }
+      end
     end
-    redirect_to issue_path(@project.id, @issue.id)
   end
 
   def update_priority
